# image2-agentRAG

./: .gitignore  .gitmodules  README.md
knowledge-base/: README.md
knowledge-base/metadata/: categories.json  statistics.json
knowledge-base/normalized/legacy-readme/: prompts.jsonl
knowledge-base/normalized/prompts-by-category/: ecommerce-main-image.jsonl  others.jsonl  youtube-thumbnail.jsonl
knowledge-base/scripts/: config.py  normalize.py  sync.py  validate.py
prompt-rag/: .env.example  .gitignore  README.md  pyproject.toml
prompt-rag/deploy/: DEPLOYMENT.md  backup.sh  env.production.example  install-ubuntu.sh  prepare-release.ps1  sanitize_database.py
prompt-rag/deploy/nginx/: prompt-rag.conf
prompt-rag/deploy/systemd/: prompt-rag-backup.service  prompt-rag-backup.timer  prompt-rag.service
prompt-rag/docs/: phase-2-plan.md
prompt-rag/src/prompt_rag/: __init__.py  analysis.py  api.py  cli.py  config.py  database.py  embeddings.py  generation.py  ingest.py  models.py  retrieval.py  service.py  translation.py  workflow.py
prompt-rag/tests/: conftest.py  test_analysis.py  test_api.py  test_embeddings.py  test_ingest.py  test_retrieval.py  test_translation.py  test_workflow.py
prompt-rag/web/: index.html
prompt-rag/web-v2/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
prompt-rag/web-v2/scripts/: manage-smoke.mjs  smoke.mjs  workspace-fab-smoke.mjs
prompt-rag/web-v2/src/: App.tsx  ManageApp.tsx  api.ts  main.tsx  manage.css  styles.css  types.ts
(+9 files in other folders)
