[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "prompt-rag"
version = "0.1.0"
description = "A focused hybrid RAG service for the GPT Image prompt knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=2,<3",
  "pydantic-settings>=2.6,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
local = ["sentence-transformers>=5,<6"]
dev = ["pytest>=8,<10", "pytest-cov>=6,<8"]

[project.scripts]
prompt-rag = "prompt_rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
